Bug 387817 - Discover crashes when repeatedly searching for different things with the Flatpak backend installed
Summary: Discover crashes when repeatedly searching for different things with the Flat...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.11.4
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-12-12 03:53 UTC by Nate Graham
Modified: 2018-01-08 17:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2017-12-12 03:53:45 UTC
Application: plasma-discover (5.11.4)

Qt Version: 5.9.1
Frameworks Version: 5.40.0
Operating System: Linux 4.13.0-19-generic x86_64
Distribution: Ubuntu 17.10

-- Information about the crash:
- What I was doing when the application crashed:

I was trying to reproduce https://bugs.kde.org/show_bug.cgi?id=387789 by repeatedly searching for "Endless Sky" "Lollypop" and "GIMP" with the Flatpak backend installed. Instead, I hit this! I can't reproduce it 100% of the time, but I have now seen it three times when performing the above search spam.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fc325541d80 (LWP 15815))]

Thread 17 (Thread 0x7fc2aeffd700 (LWP 15900)):
#0  0x00007fc320a6cffd in __GI___libc_read (fd=20, buf=0x7fc2aeffca90, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007fc31b468280 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b423c4b in g_main_context_check () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc31b424110 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fc32054d7fc in start_thread (arg=0x7fc2aeffd700) at pthread_create.c:465
#10 0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 16 (Thread 0x7fc2af7fe700 (LWP 15899)):
#0  0x00007fc31b4235e4 in g_main_context_prepare () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fc31b42409b in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc32054d7fc in start_thread (arg=0x7fc2af7fe700) at pthread_create.c:465
#8  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 15 (Thread 0x7fc2ae7fc700 (LWP 15840)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x7fc298001de0, nfds=1, timeout=119720) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b424169 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc32054d7fc in start_thread (arg=0x7fc2ae7fc700) at pthread_create.c:465
#8  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 14 (Thread 0x7fc2c3fff700 (LWP 15831)):
#0  0x00007fc32055464b in futex_reltimed_wait_cancelable (private=<optimized out>, reltime=0x7fc2c3ffeb50, expected=0, futex_word=0x5603e7ba7ad0) at ../sysdeps/unix/sysv/linux/futex-internal.h:142
#1  0x00007fc32055464b in __pthread_cond_wait_common (abstime=0x7fc2c3ffec10, mutex=0x5603e7ba7a80, cond=0x5603e7ba7aa8) at pthread_cond_wait.c:533
#2  0x00007fc32055464b in __pthread_cond_timedwait (cond=0x5603e7ba7aa8, mutex=0x5603e7ba7a80, abstime=0x7fc2c3ffec10) at pthread_cond_wait.c:667
#3  0x00007fc32117c588 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc3211777cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32054d7fc in start_thread (arg=0x7fc2c3fff700) at pthread_create.c:465
#7  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 13 (Thread 0x7fc2d95d1700 (LWP 15829)):
#0  0x00007fc32055464b in futex_reltimed_wait_cancelable (private=<optimized out>, reltime=0x7fc2d95d0b50, expected=0, futex_word=0x5603e7b32450) at ../sysdeps/unix/sysv/linux/futex-internal.h:142
#1  0x00007fc32055464b in __pthread_cond_wait_common (abstime=0x7fc2d95d0c10, mutex=0x5603e7b32400, cond=0x5603e7b32428) at pthread_cond_wait.c:533
#2  0x00007fc32055464b in __pthread_cond_timedwait (cond=0x5603e7b32428, mutex=0x5603e7b32400, abstime=0x7fc2d95d0c10) at pthread_cond_wait.c:667
#3  0x00007fc32117c588 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc3211777cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32054d7fc in start_thread (arg=0x7fc2d95d1700) at pthread_create.c:465
#7  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 12 (Thread 0x7fc2d9dd2700 (LWP 15828)):
#0  0x00007fc32055464b in futex_reltimed_wait_cancelable (private=<optimized out>, reltime=0x7fc2d9dd1b50, expected=0, futex_word=0x5603e7b520f0) at ../sysdeps/unix/sysv/linux/futex-internal.h:142
#1  0x00007fc32055464b in __pthread_cond_wait_common (abstime=0x7fc2d9dd1c10, mutex=0x5603e7b520a0, cond=0x5603e7b520c8) at pthread_cond_wait.c:533
#2  0x00007fc32055464b in __pthread_cond_timedwait (cond=0x5603e7b520c8, mutex=0x5603e7b520a0, abstime=0x7fc2d9dd1c10) at pthread_cond_wait.c:667
#3  0x00007fc32117c588 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc3211777cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32054d7fc in start_thread (arg=0x7fc2d9dd2700) at pthread_create.c:465
#7  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 11 (Thread 0x7fc2da5d3700 (LWP 15827)):
#0  0x00007fc32055464b in futex_reltimed_wait_cancelable (private=<optimized out>, reltime=0x7fc2da5d2b50, expected=0, futex_word=0x5603e6d38790) at ../sysdeps/unix/sysv/linux/futex-internal.h:142
#1  0x00007fc32055464b in __pthread_cond_wait_common (abstime=0x7fc2da5d2c10, mutex=0x5603e6d38740, cond=0x5603e6d38768) at pthread_cond_wait.c:533
#2  0x00007fc32055464b in __pthread_cond_timedwait (cond=0x5603e6d38768, mutex=0x5603e6d38740, abstime=0x7fc2da5d2c10) at pthread_cond_wait.c:667
#3  0x00007fc32117c588 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc3211777cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32054d7fc in start_thread (arg=0x7fc2da5d3700) at pthread_create.c:465
#7  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7fc2dadd4700 (LWP 15826)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x5603e7b77b80, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b424169 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b424502 in g_main_loop_run () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc2df425b26 in  () at /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fc31b44b645 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc32054d7fc in start_thread (arg=0x7fc2dadd4700) at pthread_create.c:465
#6  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7fc2db5d5700 (LWP 15825)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x5603e7b59a20, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b424169 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc31b4242c1 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc31b44b645 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc32054d7fc in start_thread (arg=0x7fc2db5d5700) at pthread_create.c:465
#6  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7fc2ecd01700 (LWP 15824)):
#0  0x00007fc32055464b in futex_reltimed_wait_cancelable (private=<optimized out>, reltime=0x7fc2ecd00b50, expected=0, futex_word=0x7fc2e0006ec0) at ../sysdeps/unix/sysv/linux/futex-internal.h:142
#1  0x00007fc32055464b in __pthread_cond_wait_common (abstime=0x7fc2ecd00c10, mutex=0x7fc2e0006e70, cond=0x7fc2e0006e98) at pthread_cond_wait.c:533
#2  0x00007fc32055464b in __pthread_cond_timedwait (cond=0x7fc2e0006e98, mutex=0x7fc2e0006e70, abstime=0x7fc2ecd00c10) at pthread_cond_wait.c:667
#3  0x00007fc32117c588 in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc3211777cc in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32054d7fc in start_thread (arg=0x7fc2ecd01700) at pthread_create.c:465
#7  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7fc2ed502700 (LWP 15823)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x7fc2e003fda0, nfds=1, timeout=107721) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b424169 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc32054d7fc in start_thread (arg=0x7fc2ed502700) at pthread_create.c:465
#8  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7fc2eea4a700 (LWP 15821)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x7fc2e8002de0, nfds=1, timeout=9740) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b424169 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc32054d7fc in start_thread (arg=0x7fc2eea4a700) at pthread_create.c:465
#8  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7fc2f8030700 (LWP 15820)):
#0  0x00007fc32117a12d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#1  0x00007fc3213b139a in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007fc31b4236a8 in g_main_context_prepare () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc31b42409b in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fc3242f8846 in  () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#9  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fc32054d7fc in start_thread (arg=0x7fc2f8030700) at pthread_create.c:465
#11 0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7fc3035ef700 (LWP 15819)):
#0  0x00007fc31b4695b9 in g_mutex_lock () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fc31b4236b3 in g_main_context_prepare () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b42409b in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc321d82f45 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fc32054d7fc in start_thread (arg=0x7fc3035ef700) at pthread_create.c:465
#10 0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7fc308d80700 (LWP 15818)):
#0  0x00007fc320a6cffd in __GI___libc_read (fd=7, buf=0x7fc308d7fa60, nbytes=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007fc31b468280 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc31b423c4b in g_main_context_check () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc31b424110 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc31b42427c in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc3213b149b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fc321356e3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fc3211763ca in QThread::exec() () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fc32305de45 in  () at /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#9  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fc32054d7fc in start_thread (arg=0x7fc308d80700) at pthread_create.c:465
#11 0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fc311c94700 (LWP 15817)):
#0  0x00007fc320a71901 in __GI___poll (fds=0x7fc311c93bb8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fc31b1bd747 in  () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007fc31b1bf53a in xcb_wait_for_event () at /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fc3141eef09 in  () at /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007fc32117b29d in  () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fc32054d7fc in start_thread (arg=0x7fc311c94700) at pthread_create.c:465
#6  0x00007fc320a7db0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fc325541d80 (LWP 15815)):
[KCrash Handler]
#6  0x00007fc3243ac134 in QQuickItem::isVisible() const () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#7  0x00007fc3243afeb5 in  () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#8  0x00007fc3243b0aec in QQuickItem::inputMethodQuery(Qt::InputMethodQuery) const () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#9  0x00007fc3243b83ae in QQuickItem::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#10 0x00007fc32295846c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#11 0x00007fc32295fd34 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#12 0x00007fc321358de8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fc32219e4bd in QGuiApplicationPrivate::_q_updateFocusObject(QObject*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#14 0x00007fc32219ed70 in  () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#15 0x00007fc3213878e5 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007fc3221a1122 in QWindow::focusObjectChanged(QObject*) () at /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#17 0x00007fc3243cadbb in QQuickWindowPrivate::setFocusInScope(QQuickItem*, QQuickItem*, Qt::FocusReason, QFlags<QQuickWindowPrivate::FocusOption>) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#18 0x00007fc3243b7b31 in QQuickItem::setFocus(bool, Qt::FocusReason) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#19 0x00007fc3243b7e9b in QQuickItem::forceActiveFocus(Qt::FocusReason) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#20 0x00007fc3243bc4e5 in  () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#21 0x00007fc3243bd2c5 in QQuickItem::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#22 0x00007fc30bdaf9c5 in QQuickControl::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#23 0x00007fc30bdb3a65 in QQuickPage::qt_metacall(QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#24 0x00007fc321cdb56e in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#25 0x00007fc321cdb5c9 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#26 0x00007fc321cdb5c9 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#27 0x00007fc321cdb5c9 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#28 0x00007fc321d37119 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#29 0x00007fc321cb52cb in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#30 0x00007fc321cb67d2 in  () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#31 0x00007fc321cb7881 in QV4::QObjectMethod::callInternal(QV4::CallData*, QV4::Scope&) const () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#32 0x00007fc321cd056d in QV4::Runtime::method_callProperty(QV4::ExecutionEngine*, int, QV4::CallData*) () at /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#33 0x00007fc32552b676 in  ()
#34 0x00005603e9e31b90 in  ()
#35 0x00007fffecbe6f60 in  ()
#36 0x00007fffecbe5540 in  ()
#37 0x0000000000000000 in  ()

Reported using DrKonqi
Comment 1 Aleix Pol 2018-01-08 17:10:20 UTC
Git commit 61f822a2f2db3a0c421a3aa088e6beab41d07577 by Aleix Pol.
Committed on 08/01/2018 at 15:45.
Pushed by apol into branch 'master'.

Issue an empty search when there is an empty query

It turns out that when destroying an applistpage we often get an empty
query so we just go with it for now.

M  +3    -1    libdiscover/resources/ResourcesModel.cpp

https://commits.kde.org/discover/61f822a2f2db3a0c421a3aa088e6beab41d07577