Issue an empty search when there is an empty query

It turns out that when destroying an applistpage we often get an empty
query so we just go with it for now.

BUG: 387817